# NLP_2025

./: .gitignore  hello.py  pyproject.toml
codes/L01_Intro&Tokenization/: HW1_1_Dictionary_based_Tokenization_to_Student_2024.ipynb  HW1_2_Neural_Network_Tokenization_to_Student_2024.ipynb
