[project]
name = "nlp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "marisa-trie>=1.2.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pythainlp>=5.0.5",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
]
