[project]
name = "nlp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.0",
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "lightning>=2.5.0.post0",
    "marisa-trie>=1.2.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pythainlp>=5.0.5",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "wandb>=0.19.4",
]
